--- a/res/layout/fragment_weekly.xml
+++ b/res/layout/fragment_weekly.xml
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/textViewDaily"
+                android:id="@+id/textViewWeekly"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -65,11 +65,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <ImageView
-                android:id="@+id/imageView1"
+            <LinearLayout
+                android:id="@+id/weeklyGraphViewHolder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/drawable_glucose_graph" />
+                android:orientation="vertical" >
+
+            </LinearLayout>
 
         </TableRow>
 
