--- a/res/layout-large/fragment_navigation.xml
+++ b/res/layout-large/fragment_navigation.xml
@@ -24,7 +24,7 @@
             android:id="@+id/imageViewNavigationUserInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
+            android:layout_gravity="center"
             android:src="@drawable/icon_user_info" />
 
         <TextView
@@ -40,7 +40,7 @@
             android:id="@+id/imageViewNavigationDaily"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
+            android:layout_gravity="center"
             android:src="@drawable/icon_graph" />
 
         <TextView
@@ -56,7 +56,7 @@
             android:id="@+id/imageViewNavigationAnalysis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
+            android:layout_gravity="center"
             android:src="@drawable/icon_bar" />
 
         <TextView
@@ -81,7 +81,7 @@
             android:id="@+id/imageViewNavigationContacts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
+            android:layout_gravity="center"
             android:src="@drawable/icon_contacts" />
 
         <TextView
@@ -97,7 +97,7 @@
             android:id="@+id/imageViewNavigationWeekly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
+            android:layout_gravity="center"
             android:src="@drawable/icon_graph" />
 
         <TextView
@@ -113,7 +113,7 @@
             android:id="@+id/imageViewNavigationMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
+            android:layout_gravity="center"
             android:src="@drawable/icon_message" />
 
         <TextView
@@ -138,7 +138,7 @@
             android:id="@+id/imageViewNavigationLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
+            android:layout_gravity="center"
             android:src="@drawable/icon_location" />
 
         <TextView
@@ -154,7 +154,7 @@
             android:id="@+id/imageViewNavigationMonthly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
+            android:layout_gravity="center"
             android:src="@drawable/icon_graph" />
 
         <TextView
@@ -170,7 +170,7 @@
             android:id="@+id/imageViewNavigationEmergency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
+            android:layout_gravity="center"
             android:src="@drawable/icon_emergency" />
 
         <TextView
