--- a/res/layout-large/activity_add_contact.xml
+++ b/res/layout-large/activity_add_contact.xml
@@ -14,6 +14,7 @@
         android:id="@+id/editTextAddContact1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+         android:singleLine="true"
         android:ems="10" >
 
         <requestFocus />
