--- a/res/layout-large/activity_update_user_info.xml
+++ b/res/layout-large/activity_update_user_info.xml
@@ -23,6 +23,7 @@
               android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:singleLine="true"
         />
 
     
@@ -72,6 +73,7 @@
             android:id="@+id/editTextUpdateName"
               android:layout_width="match_parent"
             android:layout_height="wrap_content"
+             android:singleLine="true"
             android:ems="10"
             />
       
