--- a/res/layout/activity_update_user_info.xml
+++ b/res/layout/activity_update_user_info.xml
@@ -22,6 +22,7 @@
             android:id="@+id/editTextUpdateLoginName"
               android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:singleLine="true"
             android:ems="10"
         />
 
@@ -72,6 +73,7 @@
             android:id="@+id/editTextUpdateName"
               android:layout_width="match_parent"
             android:layout_height="wrap_content"
+             android:singleLine="true"
             android:ems="10"
             />
       
