--- a/res/layout/activity_user_log_in.xml
+++ b/res/layout/activity_user_log_in.xml
@@ -23,6 +23,7 @@
         android:gravity="center"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
+        android:singleLine="true"
         android:ems="10"
         android:hint="Username" />
 
