--- a/res/layout/activity_add_data.xml
+++ b/res/layout/activity_add_data.xml
@@ -1,5 +1,9 @@
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView1"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
@@ -67,6 +71,19 @@
         android:layout_height="wrap_content"
         android:text="Attach Location" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Notes:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10" />
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="20dp" />
@@ -79,3 +96,4 @@
 
 </LinearLayout>
  
+</ScrollView>
