--- a/res/layout-large/dialog_create_account.xml
+++ b/res/layout-large/dialog_create_account.xml
@@ -107,7 +107,7 @@
             android:inputType="numberDecimal" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textViewUserName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Weight:"
