--- a/res/layout/activity_add_data.xml
+++ b/res/layout/activity_add_data.xml
@@ -72,7 +72,7 @@
         android:text="Attach Location" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Notes:"
