--- a/res/layout/activity_view_user_info.xml
+++ b/res/layout/activity_view_user_info.xml
@@ -11,7 +11,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewUserName"
          android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Medium Text"
@@ -25,7 +25,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewAge"
          android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Medium Text"
@@ -39,7 +39,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textViewGender"
          android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Medium Text"
@@ -53,7 +53,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textViewHeight"
          android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Medium Text"
@@ -67,7 +67,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/textViewWeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Medium Text"
