--- a/res/layout-large/fragment_daily.xml
+++ b/res/layout-large/fragment_daily.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content" >
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
@@ -23,7 +23,7 @@
                     android:id="@+id/imageButtonPrevious"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
+                    android:layout_gravity="center"
                     android:src="@drawable/ic_action_previous_item" />
 
                 <ImageButton
@@ -31,15 +31,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="265dp"
-                    android:layout_marginRight="265dp"
+                    android:layout_marginLeft="220dp"
+                    android:layout_marginRight="220dp"
                     android:src="@drawable/ic_action_go_to_today" />
 
                 <ImageButton
                     android:id="@+id/imageButtonNext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
+                    android:layout_gravity="center"
                     android:src="@drawable/ic_action_next_item" />
             </LinearLayout>
         </TableRow>
@@ -75,6 +75,75 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
         </TableRow>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/textViewSayNumDataPoints"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/cell_shape"
+                android:text="# data points" />
+
+            <TextView
+                android:id="@+id/textViewNumDataPoints"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/cell_shape"
+                android:text="" />
+
+            <TextView
+                android:id="@+id/textViewSayMax"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/cell_shape"
+                android:text="Max Value" />
+
+            <TextView
+                android:id="@+id/textViewMax"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/cell_shape"
+                android:text="" />
+
+            <TextView
+                android:id="@+id/textViewSayMin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/cell_shape"
+                android:text="Min value" />
+
+            <TextView
+                android:id="@+id/textViewMin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/cell_shape"
+                android:text="" />
+
+            <TextView
+                android:id="@+id/textViewSayAvg"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/cell_shape"
+                android:text="Average" />
+
+            <TextView
+                android:id="@+id/textViewAvg"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/cell_shape"
+                android:text="" />
+        </LinearLayout>
     </TableLayout>
 
 </LinearLayout>
