--- a/res/layout/activity_view_contact.xml
+++ b/res/layout/activity_view_contact.xml
@@ -7,6 +7,7 @@
         android:id="@+id/buttonAddContact"
        android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:onClick="addContact"
         android:text="Add New Contact" />
 
