--- a/res/layout/activity_view_user_info.xml
+++ b/res/layout/activity_view_user_info.xml
@@ -77,6 +77,7 @@
         android:id="@+id/buttonEditUser"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:onClick="updateUserInfo"
         android:text="Edit" />
 
