--- a/res/drawable/cell_shape.xml
+++ b/res/drawable/cell_shape.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#ff9" />
+    <solid android:color="#000" />
 
     <stroke
         android:width="1dp"
-        android:color="#000" />
+        android:color="#fff" />
 
 </shape>
