--- a/res/layout-large/fragment_monthly.xml
+++ b/res/layout-large/fragment_monthly.xml
@@ -84,7 +84,8 @@
             
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp" >
 
                 <TextView
                     android:id="@+id/textViewSayNumDataPoints"
@@ -92,7 +93,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/cell_shape"
-                    android:text="# data" />
+                    android:text="# data"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:id="@+id/textViewNumDataPoints"
@@ -100,7 +102,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/cell_shape"
-                    android:text="" />
+                    android:gravity="center"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:id="@+id/textViewSayMax"
@@ -108,7 +111,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/cell_shape"
-                    android:text="Max Value" />
+                    android:text="Max Value"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:id="@+id/textViewMax"
@@ -116,7 +120,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/cell_shape"
-                    android:text="" />
+                    android:gravity="center"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:id="@+id/textViewSayMin"
@@ -124,7 +129,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/cell_shape"
-                    android:text="Min value" />
+                    android:text="Min value"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:id="@+id/textViewMin"
@@ -132,7 +138,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/cell_shape"
-                    android:text="" />
+                    android:gravity="center"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:id="@+id/textViewSayAvg"
@@ -140,7 +147,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/cell_shape"
-                    android:text="Average" />
+                    android:text="Average"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:id="@+id/textViewAvg"
@@ -148,7 +156,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/cell_shape"
-                    android:text="" />
+                    android:gravity="center"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
             </LinearLayout>
             
         </TableRow>
